--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
   "name": "com.kiwiframework.puremvc",
-  "displayName": "Kiwi PureMVC",
+  "displayName": "KiwiFramework PureMVC",
   "version": "1.0.0"
 }
