--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.kiwiframework.puremvc",
-  "displayName": "KiwiFramework PureMVC",
+  "name": "com.kiwi.framework.puremvc",
+  "displayName": "Kiwi's PureMVC",
   "version": "1.0.0"
 }
